@@ -1,3 +1,7 @@
+2008-12-03  Allan Saddi  <allan@saddi.com>
+
+	* Update ez_setup.py.
+
 2008-09-26  Allan Saddi  <allan@saddi.com>
 
 	* Re-seed random module after each fork.
